# Candela

./: .gitignore  Additional Notes.txt  Controls.txt  Credits.txt  LICENSE  Lumen.sln  Lumen.vcxproj  Lumen.vcxproj.filters  README.md  imgui.ini  log.txt  main.cpp
Source/: CMakeLists.txt  Lumen.vcxproj  Lumen.vcxproj.filters  main.cpp
Source/Core/: AABB.h  BloomFBO.cpp  BloomRenderer.h  Entity.h  FpsCamera.h  Macros.h  MathsHelpers.cpp  Mesh.cpp  Mesh.h  MeshOptimizer.cpp  MeshOptimizer.h  ModelFileLoader.cpp  ModelFileLoader.h  ModelRenderer.cpp  ModelRenderer.h  Object.cpp  Object.h  OrthographicCamera.h  Physics.cpp  Physics.h  Pipeline.cpp  Pipeline.h  Plane.h  Player.h  ProbeGI.cpp  ProbeMap.cpp  ProbeMap.h  ShaderManager.cpp  ShadowMapHandler.cpp  ShadowMapHandler.h  ShadowRenderer.h  Shadowmap.cpp  Shadowmap.h  SkyShadowMap.h  SpatioTemporalBN.cpp  SpatioTemporalBN.h  TAAJitter.cpp  TAAJitter.h  Threadpool.cpp  Tonemap.cpp  (+2 more)
Source/Core/Application/: Application.cpp  Application.h  Logger.cpp  Logger.h
Source/Core/BVH/: Intersector.cpp  Intersector.h
Source/Core/GLClasses/: ComputeShader.cpp  ComputeShader.h  CubeTextureMap.cpp  Fps.h  Framebuffer.cpp  Framebuffer.h  Shader.cpp  Shader.h  Texture.cpp  TextureArray.cpp  TextureArray.h  VertexArray.cpp  VertexBuffer.h  stb_include.cpp
Source/Core/Shaders/: 2DElementShaderFrag.glsl  BasicBlit.glsl  BasicFrag.glsl  BasicVert.glsl  BilateralBlurNonDepthGuided.glsl  BloomBlurTwoPass.glsl  CAS.glsl  CheckerboardReconstruct.glsl  ClearData.comp  ClearIntData.comp  Collide.comp  ColorPass.glsl  Composite.glsl  CopyVolume.glsl  DOFVert.glsl  DepthOfField.glsl  DiffuseRayGenerate.glsl  DiffuseTrace.glsl  FXAA311.glsl  GenerateHighFreqNormals.glsl  GeometryFrag.glsl  GlassDeferred.glsl  GlassDeferredStochastic.glsl  LTC.glsl  (+18 more)
Source/Dependencies/: CMakeLists.txt
Source/Res/: readme.txt
(+211 files in other folders)
